--- a/src/public/css/Layouts/common.css
+++ b/src/public/css/Layouts/common.css
@@ -1,6 +1,7 @@
 .header_main {
     background: rgb(248, 248, 248);
     width: 100%;
+    height: 11vh;
 }
 
 .header__inner {
@@ -22,7 +23,7 @@
     align-items: center;
     height: 40px;
     width: 40px;
-    background-color: rgb(33, 89, 255);
+    background-color: rgb(194 194 194);
     border-radius: 5px;
     box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
 }
@@ -56,7 +57,7 @@
 }
 
 .header__logo {
-    color: rgb(33, 89, 255);
+    color: #8a8a8a;
     text-decoration: none;
     font-weight: bolder;
     font-size: 33px;
