--- a/src/public/css/Layouts/common.css
+++ b/src/public/css/Layouts/common.css
@@ -1,7 +1,7 @@
 .header_main {
     background: rgb(248, 248, 248);
     width: 100%;
-    height: 11vh;
+    height: 90px;
 }
 
 .header__inner {
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     margin-left: 5%;
+    height: 50px;
 }
 
 .hamburger{
