--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,5 +1,6 @@
 .index{
     width: 100vw;
+    height: 100vh;
     min-height: 100vh;
     background: rgb(248, 248, 248);
 }
@@ -12,8 +13,8 @@
 .index_form{
     display: flex;
     width: 100%;
-    height: 8vh;
-    align-items: center;
+    height: 10%;
+    align-items: baseline;
     justify-content: end;
 }
 
@@ -80,13 +81,15 @@
     color: #6c757d;
 }
 
-.index_nav{
+.index_nav {
     display: flex;
     justify-content: space-around;
+    height: 10%;
 }
 
 .products_create_link,
-.profile_link {
+.profile_link,
+.cart_link {
     text-align: center;
     margin: 10px 0;
     background-color: #ffe3e3;
@@ -100,11 +103,12 @@
 
 .products_create_link:hover,
 .user_edit_link:hover,
-.profile_link:hover{
+.profile_link:hover,
+.cart_link:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.product_title{
+.product_title {
     text-align: center;
     font-size: 1.8rem;
     font-weight: bold;
@@ -124,7 +128,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
-    height: 370px;
+    height: 440px;
     text-align: center;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -172,6 +176,15 @@
     font-size: 1.2em;
     font-weight: bold;
     color: #d9534f;
+}
+
+.product_detail{
+    height: 13%;
+}
+
+.product_cart_link {
+    display: flex;
+    justify-content: space-around;
 }
 
 .search_container {
@@ -249,6 +262,37 @@
 .btn-primary:hover {
     background-color: #ffebfc; /* 少し濃いラベンダー */
 }
+
+.product_cart_link form {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.product_cart_link input[type="number"] {
+    width: 60px;
+    padding: 5px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    outline: none;
+    font-size: 14px;
+}
+
+.product_cart_link button {
+    background-color: #ff99cc; /* ピンク色 */
+    color: white;
+    border: none;
+    border-radius: 15px;
+    padding: 8px 15px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.product_cart_link button:hover {
+    background-color: #ff66a3; /* 濃いピンク */
+}
+
 
 @media (max-width: 768px) {
     .product_list {
