--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,6 +1,5 @@
 .index{
     width: 100vw;
-    height: 100vh;
     min-height: 100vh;
     background: rgb(248, 248, 248);
 }
@@ -13,7 +12,7 @@
 .index_form{
     display: flex;
     width: 100%;
-    height: 10%;
+    height: 10vh;
     align-items: baseline;
     justify-content: end;
 }
@@ -85,9 +84,27 @@
 .index_nav {
     display: flex;
     justify-content: space-around;
-    height: 15%;
+    height: 10vh;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.index_products_create,
+.index_profile,
+.index_cart,
+.index_coupon,
+.index_my_page{
+
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.index_products_create:hover,
+.index_profile:hover,
+.index_cart:hover,
+.index_coupon:hover,
+.index_my_page:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .products_create_link,
@@ -341,3 +358,5 @@
     background: none;
     border: none;
 }
+
+
