--- a/src/public/css/Layout/common.css
+++ b/src/public/css/Layout/common.css
@@ -1,5 +1,5 @@
 .header_main {
-    background: rgb(248, 248, 248);
+    background: linear-gradient(135deg, #ffffff, #edf9ff);
     width: 100%;
     height: 90px;
 }
@@ -24,7 +24,7 @@
     align-items: center;
     height: 40px;
     width: 40px;
-    background-color: rgb(194 194 194);
+    background-color: #7dd0ff;
     border-radius: 5px;
     box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
 }
@@ -58,7 +58,7 @@
 }
 
 .header__logo {
-    color: #8a8a8a;
+    color: #a4a4a4;
     text-decoration: none;
     font-weight: bolder;
     font-size: 33px;
