--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,7 +1,7 @@
 .index{
     width: 100vw;
     min-height: 100vh;
-    background: rgb(248, 248, 248);
+    background: linear-gradient(135deg, #d3ecff, #ffffff);
 }
 
 .index_inner{
@@ -155,9 +155,9 @@
 }
 
 .product_item {
-    background: linear-gradient(135deg, #ffe5e5, #ffffff);
+    background: white;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     width: 300px;
     height: 440px;
     text-align: center;
