--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -5,16 +5,17 @@
 }
 
 .index_inner{
+    display: flex;
     width: 100%;
     height: 100%;
 }
 
 .index_form{
-    display: flex;
+    text-align: center;
+    align-content: center;
+    padding-left: 17px;
     width: 100%;
-    height: 10vh;
-    align-items: baseline;
-    justify-content: end;
+    height: 16vh;
 }
 
 .index_search{
@@ -84,13 +85,18 @@
 .index_nav {
     display: flex;
     justify-content: space-around;
-    height: 10vh;
+    padding-left: 17px;
+    height: 70vh;
+    width: 100%;
     align-items: center;
     flex-wrap: wrap;
 }
 
 #app{
-    width: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 0.7rem;
+    width: 120px;
     height: 100vh;
 }
 
@@ -104,17 +110,9 @@
 .index_cart,
 .index_coupon,
 .index_my_page{
-
+    width: 100%;
+    height: 20%;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.index_products_create:hover,
-.index_profile:hover,
-.index_cart:hover,
-.index_coupon:hover,
-.index_my_page:hover{
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .products_create_link,
@@ -168,7 +166,7 @@
     background: white;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    width: 300px;
+    width: 350px;
     height: 440px;
     text-align: center;
     overflow: hidden;
