”react検索アニメーション”

--- a/src/public/css/sidebar.css
+++ b/src/public/css/sidebar.css
@@ -19,8 +19,8 @@
   top: 0;
   width: 200px;
   height: 100%;
-  background-color: #333;
-  color: #fff;
+  background-color: #ffffff;
+  color: #000000;
   transition: left 0.3s ease;
 }
 
