--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -10,26 +10,24 @@
     height: 100%;
 }
 
-.index_form{
-    text-align: center;
-    align-content: center;
-    padding-left: 17px;
-    width: 100%;
-    height: 16vh;
-}
-
 .index_search{
     margin-right: 10%;
 }
 
+#app{
+    width: 100%;
+    height: 0vh;
+}
+
 #toggle-search-btn{
-    margin: 10px 0;
-    background-color: #ffe3e3;
-    padding: 8px 30px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    padding: 10px 20px;
+    background-color: #ffffff;
     border: none;
-    border-radius: 10px;
+    border-radius: 3px;
     text-decoration: none;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -92,13 +90,8 @@
     flex-wrap: wrap;
 }
 
-#app{
-    width: 100%;
-    height: 10vh;
-}
-
 .product_content{
-    width: 70%;
+    width: 100%;
     height: 100vh;
 }
 
@@ -154,9 +147,9 @@
 .product_list {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 100px;
     justify-content: center;
-    margin: 20px;
+    margin: 100px;
 }
 
 .product_item {
