--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -7,7 +7,7 @@
 .index_inner{
     display: flex;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 .index_search{
@@ -92,7 +92,7 @@
 
 .product_content{
     width: 100%;
-    height: 100vh;
+    min-height: 100%;
 }
 
 .index_products_create,
