--- a/src/resources/js/styles/searchForm.css
+++ b/src/resources/js/styles/searchForm.css
@@ -1,5 +1,3 @@
-
-
 .search_container {
     display: flex;
     flex-wrap: wrap;
@@ -8,6 +6,27 @@
     border-radius: 10px; /* 角丸 */
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 軽い影 */
+}
+
+.index_search{
+    margin-right: 10%;
+}
+
+#toggle-search-btn{
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    padding: 10px 20px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 3px;
+    text-decoration: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#toggle-search-btn:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .index_search_label {
@@ -80,4 +99,47 @@
 .search_button_link:hover,
 .btn-primary:hover {
     background-color: #ffebfc; /* 少し濃いラベンダー */
+}
+
+.search_form {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    margin: 20px auto;
+    width: 80%;
+    height: 50%;
+    max-width: 600px;
+    background-color: #f8f9fa;
+    padding: 10px 15px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* アニメーションの滑らかさを指定 */
+    z-index: 10;
+}
+
+#search_form:hover {
+    transform: translateY(-5px); /* 上に少し移動 */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* 影を追加して浮き上がる効果 */
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5); /* 半透明の黒色 */
+    backdrop-filter: blur(5px); /* ぼかし効果 */
+    z-index: 1; /* モーダルの後ろになるように設定 */
+}
+
+#category_id{
+    color: #888;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/* プレースホルダーのスタイル */
+.placeholder {
+    color: #6c757d;
 }
