--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,12 +1,11 @@
 .index{
-    width: 100vw;
+    min-width: 100vw;
     min-height: 100vh;
-    background: linear-gradient(135deg, #d3ecff, #ffffff);
 }
 
 .index_inner{
     display: flex;
-    width: 100%;
+    min-width: 100%;
     min-height: 100%;
 }
 
@@ -28,6 +27,9 @@
 }
 
 .product_title {
+    width: 100%;
+    height: 8%;
+    align-content: center;
     text-align: center;
     font-size: 1.8rem;
     font-weight: bold;
@@ -37,9 +39,11 @@
 .product_list {
     display: flex;
     flex-wrap: wrap;
-    gap: 100px;
+    gap: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     justify-content: center;
-    margin: 100px;
+    margin:3% 5%;
 }
 
 .product_item {
@@ -51,6 +55,7 @@
     text-align: center;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin: 5% 8%;
 }
 
 
@@ -122,7 +127,7 @@
 }
 
 .product_cart_link button {
-    background-color: #ff99cc; /* ピンク色 */
+    background-color: #ff99cc;
     color: white;
     border: none;
     border-radius: 15px;
@@ -133,7 +138,7 @@
 }
 
 .product_cart_link button:hover {
-    background-color: #ff66a3; /* 濃いピンク */
+    background-color: #ff66a3;
 }
 
 .product_favorite_button{
@@ -163,6 +168,25 @@
 .submit_not_favorite{
     background: none;
     border: none;
+}
+
+.light-effect {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background: radial-gradient(circle, rgba(255, 0, 0, 0.8), transparent);
+    border-radius: 50%;
+    opacity: 0.5;
+    z-index: -1;
+}
+
+@keyframes moveLight {
+    0% {
+        transform: translate(0, 0) scale(1);
+    }
+    100% {
+        transform: translate(0, 0) scale(1.5);
+    }
 }
 
 
