--- a/src/public/css/product/create.css
+++ b/src/public/css/product/create.css
@@ -64,8 +64,15 @@
     color: #5c5c5c;
 }
 
+
+
+.file-upload{
+    display: flex;
+    justify-content: space-around;
+}
+
 .images_label{
-    width: 50%;
+    width: 95px;
     text-align: center;
     align-content: center;
     cursor: pointer;
@@ -82,7 +89,7 @@
 }
 
 #file_name{
-    width: 20%;
+    width: 200px;
     align-content: center;
     border-radius: 5px;
     box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
@@ -95,6 +102,10 @@
     display: none;
     cursor: pointer;
 }
+
+
+
+
 
 #price{
     width: 20%;
