--- a/src/public/css/product/edit.css
+++ b/src/public/css/product/edit.css
@@ -59,4 +59,15 @@
     margin-top: 15px;
 }
 
+/* img{
+    width: 100%;
+    height: 250px;
+} */
+
+.preview-image {
+    max-width: 100%;
+    margin: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
 
