--- a/src/public/css/product/create.css
+++ b/src/public/css/product/create.css
@@ -252,10 +252,12 @@
 }
 
 .form-file-input {
-    padding: 10px;
-    border: 1px solid #ccc;
+    border: none;
+    margin: 3%;
+    padding-left: 1%;
     border-radius: 5px;
-    width: 100%;
-    box-sizing: border-box;
-    transition: border-color 0.3s;
+    box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
+    color: rgb(138, 138, 138);
+    background-color: white;
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
