--- a/src/public/css/notification/show.css
+++ b/src/public/css/notification/show.css
@@ -1,3 +1,28 @@
+.sale_profile {
+    display: flex;
+    justify-content: end;
+    height: 15%;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-right: 5%;
+}
+
+.profile_link {
+    text-align: center;
+    margin: 10px 0;
+    background-color: #ffe3e3;
+    padding: 8px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.profile_link:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
 .notification_show_back_button{
     text-align: center;
     width: 100%;
@@ -21,3 +46,5 @@
     background-color: #e0e0e0;
     color: #5c5c5c;
 }
+
+
