--- a/src/public/css/profile/user_edit.css
+++ b/src/public/css/profile/user_edit.css
@@ -9,6 +9,31 @@
     padding: 0 20% 5%;
 }
 
+.sale_profile {
+    display: flex;
+    justify-content: end;
+    height: 15%;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-right: 5%;
+}
+
+.profile_link {
+    text-align: center;
+    margin: 10px 0;
+    background-color: #ffe3e3;
+    padding: 8px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.profile_link:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
 .user_edit_title{
     font-size: 1.5rem;
     font-family: system-ui;
@@ -102,30 +127,6 @@
 }
 
 .user_edit_button_button:hover{
-    background-color: #e0e0e0;
-    color: #5c5c5c;
-}
-
-.user_edit_back_button{
-    text-align: center;
-    width: 100%;
-    height: 10%;
-    align-content: center;
-}
-
-.user_edit_back_button_link{
-    position: absolute;
-    right: 10%;
-    top: 3%;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
-    color: #5c5c5c;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.user_edit_back_button_link:hover{
     background-color: #e0e0e0;
     color: #5c5c5c;
 }
