--- a/src/public/css/profile/profile.css
+++ b/src/public/css/profile/profile.css
@@ -24,6 +24,7 @@
 
 .profile_back_button{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
@@ -84,7 +85,7 @@
 .profile_sale_inner {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 30px;
     max-width: 1200px;
     margin: 0 auto;
