--- a/src/public/css/product/create.css
+++ b/src/public/css/product/create.css
@@ -5,7 +5,8 @@
 }
 
 .product_create_inner{
-    height: 50%;
+    height: 80%;
+    width: 100%;
     padding: 0 20% 5%;
 }
 
@@ -14,7 +15,7 @@
     font-family: system-ui;
     font-weight: bold;
     width: 100%;
-    height: 8%;
+    height: 15%;
     text-align: center;
     color: #8a8a8a;
 }
@@ -22,14 +23,14 @@
 .product_create_content{
     display: flex;
     width: 100%;
-    height: 20%;
-    margin-top: 3%;
+    height: 6%;
+    margin-top: 2%;
 }
 
 .product_create_content2{
     display: flex;
     width: 100%;
-    height: 50%;
+    height: 30%;
     margin-top: 2%;
 }
 
@@ -47,7 +48,7 @@
     width: 100%;
     margin-top: 3%;
     text-align: center;
-    height: 50%;
+    height: 80%;
 }
 
 #name{
@@ -63,8 +64,6 @@
     background-color: #e0e0e0;
     color: #5c5c5c;
 }
-
-
 
 .file-upload{
     display: flex;
@@ -136,7 +135,7 @@
 }
 
 #category{
-    width: 50%;
+    width: 30%;
     border: none;
     padding-left: 1%;
     border-radius: 5px;
@@ -151,7 +150,7 @@
 }
 
 #condition{
-    width: 50%;
+    width: 30%;
     border: none;
     padding-left: 1%;
     border-radius: 5px;
@@ -170,7 +169,7 @@
 }
 
 #detail{
-    width: 70%;
+    width: 50%;
     height: 100%;
     padding: 2% 2%;
     border: none;
@@ -185,25 +184,33 @@
     color: #5c5c5c;
 }
 
+#file-display{
+    margin-top: 3%;
+}
+
 .product_create_button{
+    position: absolute;
+    top: 20%;
+    right: 0%;
     width: 100%;
-    margin-top: 5%;
 }
 
 .product_create_button_button{
-    border-radius: 5px;
+    position: absolute;
+    bottom: 17%;
+    right: 15%;
+    border-radius: 15px;
     box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
-    color: #5c5c5c;
+    color: #ff6e97;
     border: none;
-    padding: 1% 3%;
+    padding: 1% 2%;
     font-size: large;
     background-color: rgb(255, 255, 255);
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .product_create_button_button:hover{
-    background-color: #e0e0e0;
-    color: #5c5c5c;
+    background-color: #ffecec;
 }
 
 .success_message, .error_message {
@@ -237,3 +244,37 @@
     background-color: white;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
+@media screen and (max-width: 768px) {
+    #category , #condition{
+        width: 50%;
+    }
+
+    .content_title{
+        width: 50%;
+    }
+
+    #detail{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .product_create_button {
+        bottom: -13%;
+        right: -7%;
+    }
+
+    .file-upload-container{
+        width: 125%;
+        align-items: end;
+    }
+}
+
+.alert_messages{
+    position: absolute;
+    bottom: 0%;
+    left: 5%;
+}
+
+
