--- a/src/resources/js/styles/fileDisplay.css
+++ b/src/resources/js/styles/fileDisplay.css
@@ -34,9 +34,6 @@
 
 /* 画像プレビューコンテナ */
 .preview-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 12px;
     max-width: 400px;
 }
 
@@ -75,4 +72,11 @@
 
 .preview-item:hover .remove-button {
     opacity: 1;
+}
+
+@media screen and (max-width: 480px) {
+    .file-upload-container{
+        width: 125%;
+        align-items: end;
+    }
 }
